Homepage : scroll-down jumping icon was not centered, corrected it.

--- a/style.css
+++ b/style.css
@@ -632,8 +632,7 @@ header.full-width-container-category.welcome-screen h1.category-title {
 .scroll-down {
     position: absolute;
     bottom: 30px;
-    left: 50%;
-    margin-left: -16px;
+    left: calc(50% - 30px);
     display: block;
     width: 60px;
     height: 60px;
